--- a/vulnerable-application/src/views/error.handlebars
+++ b/vulnerable-application/src/views/error.handlebars
@@ -1,5 +1,6 @@
 <h2>An error occured</h2>
-<p>Error: {{{msg}}}</p>
-
+<h3>{{{message}}}</h3>
+<p>{{{error.status}}}</p>
+<pre>{{{error.stack}}}</pre>
 
 <a href="/">Go back home</a>
