--- a/vulnerable-application/src/views/home.handlebars
+++ b/vulnerable-application/src/views/home.handlebars
@@ -1,6 +1,6 @@
 <form class="pure-form pure-form-stacked" method="POST" action="/login">
   <fieldset>
-    <legend>Login to vote</legend>
+    <legend>Login to vote!</legend>
     <label for="username">Username</label>
     <input type="text" name="username" placeholder="Username" />
     <label for="password">Password</label>
