XSS - how to rig an election

--- a/vulnerable-application/src/views/voting.handlebars
+++ b/vulnerable-application/src/views/voting.handlebars
@@ -27,7 +27,7 @@
   {{#each comments}}
   <div>
     <small>Author: {{author}}</small>
-    <p>{{comment}}</p>
+    <p>{{{comment}}}</p>
   </div>
   {{/each}}
 </div>
