--- a/vulnerable-application/src/views/layouts/main.handlebars
+++ b/vulnerable-application/src/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
 
 <head>
   <meta charset="utf-8">
@@ -8,6 +8,7 @@
 
   <!-- Pico.css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
+
   <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
