--- a/vulnerable-application/src/views/error.handlebars
+++ b/vulnerable-application/src/views/error.handlebars
@@ -1,6 +1,8 @@
-<h2>An error occured</h2>
-<h3>{{{message}}}</h3>
-<p>{{{error.status}}}</p>
-<pre>{{{error.stack}}}</pre>
+<article>
+  <h2>An error occured</h2>
+  <h3>{{{message}}}</h3>
+  <p>{{{error.status}}}</p>
+  <pre>{{{error.stack}}}</pre>
 
-<a href="/">Go back home</a>
+  <a href="/">Go back home</a>
+</article>
